# itcl

./: .travis.yml  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in  itclConfig.sh.in  mkIndex.tcl.in  pkgIndex.tcl.in  releasenotes.txt
.fossil-settings/: crlf-glob  ignore-glob
.github/workflows/: linux-build.yml
doc/: Class.3  List.3  Object.3  Preserve.3  RegisterC.3  Stack.3  body.n  class.n  code.n  component.n  configbody.n  delegation.n  delete.n  ensemble.n  extendedclass.n  find.n  is.n  itcl.n  itcl_info.n  itclcomponent.n  itcldelegate.n  itclextendedclass.n  itcloption.n  itclvars.n  itclwidget.n  local.n  option.n  scope.n  widget.n
generic/: itcl.decls  itcl.h  itcl2TclOO.c  itcl2TclOO.h  itclBase.c  itclBuiltin.c  itclClass.c  itclCmd.c  itclDecls.h  itclEnsemble.c  itclHelpers.c  itclInfo.c  itclInt.decls  itclInt.h  itclIntDecls.h  itclLinkage.c  itclMethod.c  itclMigrate2TclCore.c  itclMigrate2TclCore.h  itclNeededFromTclOO.c  itclNeededFromTclOO.h  itclObject.c  itclParse.c  itclResolve.c  itclResolve2.c  itclStubInit.c  itclStubLib.c  itclStubs.c  itclTclIntStubsFcn.c  itclTclIntStubsFcn.h  itclTestRegisterC.c  itclUtil.c  itclVarsAndCmds.c  itclVarsAndCmds.h  itclWidgetBase.c  itclWidgetBuiltin.c  itclWidgetCmd.c  itclWidgetInfo.c  itclWidgetObject.c  itclWidgetParse.c  (+10 more)
itclWidget/: Makefile.in  configure  configure.ac  configure.in  pkgIndex.tcl.in
itclWidget/generic/: itclWidgetBase.c  itclWidgetBuiltin.c  itclWidgetCmd.c  itclWidgetInfo.c  itclWidgetInt.h  itclWidgetObject.c  itclWidgetParse.c
itclWidget/tclconfig/: tcl.m4
itclWidget/tests/: all.tcl  itclwidget.test  widgetadaptor.test  widgetclass.test
itclWidgets/: Makefile.in  configure  configure.in  itclwidgets.tcl.in  license.terms  pkgIndex.tcl.in
itclWidgets/generic/: buttonbox.tcl  calendar.tcl  canvasprintbox.tcl  canvasprintdialog.tcl  checkbox.tcl  colors.tcl  combobox.tcl  dateentry.tcl  datefield.tcl  dialog.tcl  dialogshell.tcl  entryfield.tcl  hierarchy.tcl  labeledframe.tcl  labeledwidget.tcl  menubar.tcl  notebook.tcl  optionmenu.tcl  pushbutton.tcl  radiobox.tcl  scrolledcanvas.tcl  scrolledframe.tcl  scrolledhtml.tcl  scrolledlistbox.tcl  scrolledtext.tcl  scrolledwidget.tcl  selectionbox.tcl  selectiondialog.tcl  shell.tcl  spindate.tcl  spinint.tcl  spinner.tcl  spintime.tcl  tab.tcl  tabnotebook.tcl  tabset.tcl  tclIndex  timeentry.tcl  timefield.tcl  toolbar.tcl  (+1 more)
itclWidgets/tclconfig/: tcl.m4
itclWidgets/tests/: all.tcl  buttonbox.test  calendar.test  canvasprintbox.test  canvasprintdialog.test  checkbox.test  combobox.test  dateentry.test  datefield.test  entryfield.test  hierarchy.test  labeledframe.test  labeledwidget.test  menubar.test  optionmenu.test  pushbutton.test  radiobox.test  scrolledcanvas.test  scrolledframe.test  scrolledhtml.test  scrolledlistbox.test  scrolledtext.test  selectionbox.test  selectiondialog.test  shell.test  spindate.test  spinint.test  spinner.test  spintime.test  tabnotebook.test  tabset.test  timeentry.test  timefield.test  toolbar.test  watch.test
itclng/: Makefile.in  aclocal.m4  configure.in  itclngConfig.sh.in
itclng/generic/: itclng.decls  itclng.h  itclng2TclOO.c  itclng2TclOO.h  itclngBase.c  itclngCMethod.c  itclngCMethod.h  itclngClass.c  itclngCmd.c  itclngDecls.h  itclngHelpers.c  itclngInt.h  itclngIntDecls.h  itclngLinkage.c  itclngMethod.c  itclngMigrate2TclCore.c  itclngMigrate2TclCore.h  itclngNeededFromTclOO.h  itclngObject.c  itclngResolve.c  itclngStubInit.c  itclngStubLib.c  itclngTclIntStubsFcn.c  itclngTclIntStubsFcn.h  itclngUtil.c
itclng/tclconfig/: tcl.m4
itclng/tests/: all.tcl  basic.test  body.test  chain.test  delete.test  info.test  inherit.test  interp.test  local.test  methods.test  mkindex.itcl  mkindex.test  namespace.test  protection.test  scope.test
itclng/tools/: genStubs.tcl
mac/: itclMacApplication.r  itclMacLibrary.r  itclMacResource.r  pkgIndex.tcl  tclMacAppInit.c
tests/: all.tcl  basic.test  body.test  chain.test  defs  delete.test  eclasscomponent.test  ensemble.test  general1.test  helpers.tcl  import.test  info.test  inherit.test  interp.test  local.test  methods.test  mkindex.itcl  mkindex.test  namespace.test  protection.test  scope.test  sfbugs.test  tclIndex  typeclass.test  typedelegation.test  typefunction.test  typeinfo.test  typeoption.test  typevariable.test  widgetadaptor.test  widgetclass.test
tests-perf/: itcl-basic.perf.tcl
tools/: genStubs.tcl
unix/: Makefile.in  configure.in  tclAppInit.c  test.tcl
win/: .cvsignore  dllEntryPoint.c  itcl.rc  itclsh.rc  makefile.vc  nmakehlp.c  pkgIndex.tcl  rules.vc  tclAppInit.c
win/rc/: itcl.rc
